games/satisfactory-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: satisfactory-server
  namespace: games
spec:
  selector:
    app: satisfactory-server
  type: LoadBalancer
  loadBalancerIP: 192.168.222.234
  externalTrafficPolicy: Local
  ports:
  - name: game
    port: 7777
    protocol: UDP
  - name: beacon
    port: 15000
    protocol: UDP
  - name: query
    port: 15777
    protocol: UDP
